--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mocha": "^8.3.0",
     "pg": "^8.5.1"
   }
