--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "deploy": "sqitch deploy db:pg:kodo-ecolo"
   },
   "repository": {
